--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 
 [dependencies]
 canonical_json = { path = ".." }
-serde = { version = "1.0", features = ["derive"] }
+serde = "1.0"
 serde_json = "1.0"
