--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ description = "A Canonical JSON serializer"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1"
+hex = "0.4"
